--- a/Quality/Quality/Areas/SampleRFT/Views/PicturesDummy/Index.cshtml
+++ b/Quality/Quality/Areas/SampleRFT/Views/PicturesDummy/Index.cshtml
@@ -64,6 +64,9 @@
     .detail_Head {
         width: 95%;
     }
+    input[type=text]{
+        width:10vw;
+    }
 </style>
 <div class="main-content">
 
