--- a/Quality/Quality/Areas/BulkFGT/Views/AccessoryOvenWash/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/AccessoryOvenWash/Index.cshtml
@@ -260,36 +260,36 @@
                         </tbody>
                     </table>
                 </div>
-                <div style="margin-top: 1em;Ovenflow:auto">
-                    <table cellspacing="100" class="DataTable DetailTable table table-striped display;" style="width: 200vw">
+                <div style="margin-top: 1em;min-width:200vw;">
+                    <table cellspacing="100" class="DataTable DetailTable table table-striped display;" style="width:100%">
                         <thead>
                             <tr class="row-name" id="row-name">
-                                <th style="width:5vw">Seq</th>
-                                <th style="width:5vw">WKNo</th>
-                                <th style="width:5vw">Arrive W/H Date</th>
-                                <th style="width:5vw">SCI Refno</th>
-                                <th style="width:5vw">Refno</th>
-                                <th style="width:5vw">Supplier</th>
-                                <th style="width:5vw">Color</th>
-                                <th style="width:5vw">Size</th>
-                                <th style="width:5vw">Arrive Qty</th>
-                                <th style="width:5vw">Insp. Deadline</th>
-                                <th style="width:5vw">Over All Result</th>
-                                <th style="width:5vw">Oven N/A</th>
-                                <th style="width:5vw">Oven Result</th>
-                                <th style="width:5vw">Oven Scale</th>
-                                <th style="width:5vw">Oven Last Test Date</th>
-                                <th style="width:5vw">Oven Lab Tech</th>
-                                <th style="width:5vw">Remark</th>
-                                <th style="width:5vw">Wash N/A</th>
-                                <th style="width:5vw">Wash Result</th>
-                                <th style="width:5vw">Wash Scale</th>
-                                <th style="width:5vw">Wash Last Test Date</th>
-                                <th style="width:5vw">Wash Lab Tech</th>
-                                <th style="width:5vw">Remark</th>
-                                <th style="width:5vw">Receiving</th>
-                                <th style="width:5vw">Oven Test</th>
-                                <th style="width:5vw">Wash Test</th>
+                                <th>Seq</th>
+                                <th>WKNo</th>
+                                <th>Arrive W/H Date</th>
+                                <th>SCI Refno</th>
+                                <th>Refno</th>
+                                <th>Supplier</th>
+                                <th>Color</th>
+                                <th>Size</th>
+                                <th>Arrive Qty</th>
+                                <th>Insp. Deadline</th>
+                                <th>Over All Result</th>
+                                <th>Oven N/A</th>
+                                <th>Oven Result</th>
+                                <th>Oven Scale</th>
+                                <th>Oven <br />Last Test Date</th>
+                                <th>Oven Lab Tech</th>
+                                <th>Remark</th>
+                                <th>Wash N/A</th>
+                                <th>Wash Result</th>
+                                <th>Wash Scale</th>
+                                <th>Wash Last Test Date</th>
+                                <th>Wash Lab Tech</th>
+                                <th>Remark</th>
+                                <th>Receiving</th>
+                                <th>Oven Test</th>
+                                <th>Wash Test</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -299,7 +299,7 @@
                                 <tr class="row-content" style="vertical-align: middle; text-align: center;">
                                     <td>
                                         @Html.HiddenFor(modelItem => Model.DataList[i].AIR_LaboratoryID, new { @class = "required" })
-                                        @Html.HiddenFor(modelItem => Model.DataList[i].Seq1, new { @class="required"})
+                                        @Html.HiddenFor(modelItem => Model.DataList[i].Seq1, new { @class = "required" })
                                         @Html.HiddenFor(modelItem => Model.DataList[i].Seq2, new { @class = "required" })
                                         @Html.DisplayFor(modelItem => Model.DataList[i].Seq)
                                     </td>
