--- a/Quality/Quality/Areas/BulkFGT/Views/FabricCrkShrkTest/HeatTest.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/FabricCrkShrkTest/HeatTest.cshtml
@@ -121,6 +121,17 @@
         padding: 0.5em;
         vertical-align: middle;
     }
+    .width6vw {
+        width: 6vw;
+    }
+
+    .width8vw {
+        width: 8vw;
+    }
+
+    .width9vw {
+        width: 9vw;
+    }
 </style>
 @using (Html.BeginForm("HeatTestSave", ViewContext.RouteData.GetRequiredString("Controller"), FormMethod.Post, new { id = "DetailForm" }))
 {
@@ -346,13 +357,13 @@
                                     <tr idx="@i" class="row-content" style="vertical-align: middle; text-align: center;">
                                         <td>
                                             <div class="input-group">
-                                                @Html.TextBoxFor(modelItem => Model.Heat_Detail[i].Roll, new { @class = "inputRollSelectItem" })
+                                                @Html.TextBoxFor(modelItem => Model.Heat_Detail[i].Roll, new { @class = "inputRollSelectItem width6vw" })
                                                 <input type="button" class="site-btn btn-blue btnRollSelectItem" style="margin:0;border:0;" value="..." />
                                             </div>
                                         </td>
                                         <td>
                                             <div class="input-group">
-                                                @Html.TextBoxFor(modelItem => Model.Heat_Detail[i].Dyelot, new { @class = "inputRollSelectItem" })
+                                                @Html.TextBoxFor(modelItem => Model.Heat_Detail[i].Dyelot, new { @class = "inputRollSelectItem width8vw" })
                                                 <input type="button" class="site-btn btn-blue btnRollSelectItem" style="margin:0;border:0;" value="..." />
                                             </div>
                                         </td>
@@ -366,14 +377,14 @@
                                             @{
                                                 if (Model.Heat_Detail[i].Result == "Pass")
                                                 {
-                                                    styleColor = "blue";
+                                                    styleColor = "blue width6vw";
                                                 }
                                                 else
                                                 {
-                                                    styleColor = "red";
+                                                    styleColor = "red width6vw";
                                                 }
                                             }
-                                            <select id="Heat_Detail_@{@i}_Result" name="Heat_Detail[@i].Result" disabled="disabled" class="@styleColor" style="width:157px;" onchange="changeResultColor(this)">
+                                            <select id="Heat_Detail_@{@i}_Result" name="Heat_Detail[@i].Result" disabled="disabled" class="@styleColor" onchange="changeResultColor(this)">
                                                 @foreach (var item in (List<SelectListItem>)ViewBag.ResultList)
                                                 {
                                                     string selected = item.Text.Equals(Model.Heat_Detail[i].Result) ? "selected" : "";
@@ -412,7 +423,7 @@
                                             @Html.TextBoxFor(modelItem => Model.Heat_Detail[i].VerticalRate, new { @type = "number", @step = "0.01", @readonly = "readonly" })
                                         </td>
                                         <td>
-                                            @Html.TextBoxFor(modelItem => Model.Heat_Detail[i].Inspdate, "{0:yyyy/MM/dd}", new { @class = "date-picker" })
+                                            @Html.TextBoxFor(modelItem => Model.Heat_Detail[i].Inspdate, "{0:yyyy/MM/dd}", new { @class = "date-picker width9vw" })
                                         </td>
                                         <td>
                                             <div class="input-group">
