--- a/Quality/Quality/Areas/SampleRFT/Views/BACriteria/Index.cshtml
+++ b/Quality/Quality/Areas/SampleRFT/Views/BACriteria/Index.cshtml
@@ -62,6 +62,9 @@
     .detail_Head {
         width: 95%;
     }
+    input[type=text] {
+        width: 10vw;
+    }
 </style>
 
 <div class="main-content">
